Alignment bug fix

--- a/app/assets/styles/app.css
+++ b/app/assets/styles/app.css
@@ -67,26 +67,39 @@ h3{
   margin-bottom: 150px;
 }
 
-#calculator{margin: 1%}
+.modal-content{
+  margin: 5% 0%;
+  padding: 0% 1%;
+}
 
 .aboutus{
   margin-top: 1%;
   margin-bottom: 1%;
 }
 
-.icon, input, select{
+input, select, img{
   border-radius: 4px;
   padding: 0px;
 }
 
-input.input-fixer, select.input-fixer{
-  padding: 0px;
+.icon{
+  width: 30px;
+  height: 20px;
+}
+
+.calIcon{
+  width: 40px;
+  height: 40px;
 }
 
 .social img{
   width: 30px;
   height: 30px;
 }
+
+/*input.input-fixer, select.input-fixer{
+  //padding: 0px;
+}*/
 
 .navbar-fixed-bottom .col-md-4{
   margin-top: 1%;
